--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="center" src="images/heading_images/China-03.jpg" width="1100" height="212">                       
+                        <img align="middle" src="images/heading_images/header.gif" alt=""/>
                     </div>
                 </div>
             </div>
@@ -133,8 +133,7 @@
                                     <hr>
                                     <br>
                                     <!-- IMAGE -->
-                                    <img class="right" src="images/welcome_images/2.jpg" alt="center" width="770" height="320">
-
+                                    <iframe width="770" height="320" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
                                     <h3>The five famous Chinese cities  students will visit are</h3>
 
                                     <table id="tg-IkuPG" class="tg">
@@ -165,7 +164,7 @@
                                     </table>
 
                                     <br>
-
+                                    <img class="right" src="images/welcome_images/2.jpg" alt="center" width="770" height="320">
 
                                     <p>Students will experience wide geographic differences and varied regional customs & cuisines, 
                                         while learning about the uniqueness of China’s cultural renewal and modernization process. 
@@ -193,7 +192,7 @@
                                 <!-- Sidebar -->
                                 <section>
                                     <h3>Study Abroad in China</h3>
-                                    <iframe width="360" height="215" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
+                                    <img src="images/welcome_images/body.gif" alt=""/>
                                     <footer>
                                         <a href="\StudyinChina\announcement.html" class="button icon fa-info-circle" align="middle">Find out more info</a>
                                     </footer>
