--- a/hostinstitutions.html
+++ b/hostinstitutions.html
@@ -95,7 +95,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="center" src="images/heading_images/skyline_and_wall.jpg" width="1030" height="312"> 
+                        <img align="middle" src="images/heading_images/header.gif" alt=""/> 
                     </div>
                 </div>
             </div>
