--- a/itinerary.html
+++ b/itinerary.html
@@ -96,7 +96,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="center" src="images/heading_images/shanghai.jpg" width="1030" height="312"> 
+                        <img align="middle" src="images/heading_images/header.gif" alt=""/>
                     </div>
                 </div>
             </div>
