--- a/testimonials.html
+++ b/testimonials.html
@@ -95,7 +95,7 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="middle"src="images/heading_images/great_wall_1.jpg" width="1030" height="312">
+                        <img align="middle" src="images/heading_images/header.gif" alt=""/>
                     </div>
                 </div>
             </div>
