--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@
                                 <br>
                                 <!-- Sidebar -->
                                 <section>
-                                    <h3>Study Abroad in China</h3>
                                     <img src="images/welcome_images/body.gif" alt=""/>
+                                    <br>
                                     <footer>
-                                        <a href="\StudyinChina\announcement.html" class="button icon fa-info-circle" align="middle">Find out more info</a>
+                                        <a href="\StudyinChina\announcement.html"  target="_blank" class="button icon fa-info-circle" align="middle">Find out more info</a>
                                     </footer>
                                 </section>
+
                                 <hr>
                                 <br>
                             </div>
@@ -209,32 +210,32 @@
                                     <div class="grid">
                                         <div class="row 50%">
                                             <div class="6u">
-                                                <a href="http://www.accuweather.com/en/cn/china-weather" class="image fit">
+                                                <a href="http://www.accuweather.com/en/cn/china-weather"  target="_blank" class="image fit">
                                                     <img src="images/welcome_images/weather.png" title="China Weather"/>
                                                 </a>
                                             </div>
                                             <div class="6u">
-                                                <a href="http://www.chinahighlights.com/map/" class="image fit">
+                                                <a href="http://www.chinahighlights.com/map/" target="_blank" class="image fit">
                                                     <img src="images/welcome_images/map.png" title="China Map"/>
                                                 </a>
                                             </div>
                                             <div class="6u">
-                                                <a href="http://beijing.usembassy-china.org.cn/index.html" class="image fit">
+                                                <a href="http://beijing.usembassy-china.org.cn/index.html" target="_blank" class="image fit">
                                                     <img src="images/welcome_images/embassy.png" title="Ebassy of US" />
                                                 </a>
                                             </div>
                                             <div class="6u">
-                                                <a href="\StudyinChina\sidetrips.html" class="image fit">
+                                                <a href="\StudyinChina\sidetrips.html" target="_blank" class="image fit">
                                                     <img src="images/welcome_images/tips.png" title="Trip Tips" />
                                                 </a>
                                             </div>
                                             <div class="6u">
-                                                <a href="\StudyinChina\passportvisa.html" class="image fit">
+                                                <a href="\StudyinChina\passportvisa.html" target="_blank" class="image fit">
                                                     <img src="images/welcome_images/visa.png" title="Visa" />
                                                 </a>
                                             </div>
                                             <div class="6u">
-                                                <a href="\StudyinChina\photos.html" class="image fit">
+                                                <a href="\StudyinChina\photos.html" target="_blank" class="image fit">
                                                     <img src="images/welcome_images/pictures.png" title="Photos" />
                                                 </a>
                                             </div>                                            
@@ -249,11 +250,11 @@
                                 <section>
                                     <h3>Useful Link</h3>
                                     <ul class="style2">
-                                        <li><a href="http://www.brooklyn.cuny.edu/web/home.php">Brooklyn College</a></li><hr>
-                                        <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396">BC Calendar</a></li><hr>
-                                        <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP">BC Web Central</a></li><hr>
-                                        <li><a href="http://library.brooklyn.cuny.edu/resources/">BC Library</a></li><hr>
-                                        <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html">CUNYfirst</a></li>
+                                        <li><a href="http://www.brooklyn.cuny.edu/web/home.php" target="_blank">Brooklyn College</a></li><hr>
+                                        <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396" target="_blank">BC Calendar</a></li><hr>
+                                        <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP" target="_blank">BC Web Central</a></li><hr>
+                                        <li><a href="http://library.brooklyn.cuny.edu/resources/" target="_blank">BC Library</a></li><hr>
+                                        <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html" target="_blank">CUNYfirst</a></li>
                                     </ul>
                                 </section>    
 
@@ -280,7 +281,7 @@
                                         and a charming modern metropolis, with dozens of colleges and universities. 
                                         It is only one hour to Shanghai by high-speed train.</p>
 
-                                    <p>According to New York Times, a rising Nanjing now also thrives on youth and art <a href="extra_files/Nanjing-NYTimes-01.doc">(click this for report).</a></p>
+                                    <p>According to New York Times, a rising Nanjing now also thrives on youth and art <a href="extra_files/Nanjing-NYTimes-01.doc" target="_blank">(click this for report).</a></p>
 
                                     <p>In Nanjing, our hotel is in the center of the city, the downtown area, right by the picturesque Xuanwu Lake-Park, 
                                         next to the Hunan road shopping district--it is an area with many restaurants, coffee houses, bookstores, 
@@ -307,7 +308,7 @@
 
                                         <iframe width="1200" height="500" src="https://www.youtube.com/embed/3rZwfDmG3K8" frameborder="0" allowfullscreen></iframe>
                                         <br>
-                                        <a href="http://nanjing.made-in-china.com/info/business-travel-guide.html" class="button icon fa-arrow-circle-right">More info about Nanjing</a>  
+                                        <a href="http://nanjing.made-in-china.com/info/business-travel-guide.html" target="_blank" class="button icon fa-arrow-circle-right">More info about Nanjing</a>  
                                     </section>
 
                                 </section>
@@ -327,11 +328,11 @@
                             <section class="widget">
                                 <h3>Brooklyn College</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/home.php">Brooklyn College</a></li>
-                                    <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396">BC Calendar</a></li>
-                                    <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP">BC Web Central</a></li>
-                                    <li><a href="http://library.brooklyn.cuny.edu/resources/">BC Library</a></li>
-                                    <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html">CUNYfirst</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/home.php" target="_blank">Brooklyn College</a></li>
+                                    <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396" target="_blank">BC Calendar</a></li>
+                                    <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP" target="_blank">BC Web Central</a></li>
+                                    <li><a href="http://library.brooklyn.cuny.edu/resources/" target="_blank">BC Library</a></li>
+                                    <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html" target="_blank">CUNYfirst</a></li>
                                 </ul>
                             </section>
 
@@ -342,8 +343,8 @@
                             <section class="widget links">
                                 <h3>Department</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/undergraduate/speech_sciences.php">Speech Communication Arts and Sciences</a></li>
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/graduate/speech_sciences.php">Speech Communication Arts and Sciences</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/undergraduate/speech_sciences.php" target="_blank">Speech Communication Arts and Sciences</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/graduate/speech_sciences.php" target="_blank">Speech Communication Arts and Sciences</a></li>
                                 </ul>
                             </section>
 
@@ -354,8 +355,8 @@
                             <section class="widget links">
                                 <h3>Study Abroad in China</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities.php">Study Abroad Programs</a></li>
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities/China_Summer2016.php">China: CUNY-BC Study Abroad in China</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities.php" target="_blank">Study Abroad Programs</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities/China_Summer2016.php" target="_blank">China: CUNY-BC Study Abroad in China</a></li>
                                 </ul>
                             </section>
 
@@ -384,7 +385,7 @@
                         <div class="12u">
                             <div id="copyright">
                                 <ul class="menu">
-                                    <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">Brooklyn College</a></li>
+                                    <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="#" target="_blank">Brooklyn College</a></li>
                                 </ul>
                             </div>
                         </div>
