--- a/photos_ext.html
+++ b/photos_ext.html
@@ -6,9 +6,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/main.css" />
+        <script type="text/javascript">
+        </script>
+
     </head>
 
-    <body class="no-sidebar">
+
+
+    <body class="homepage">
         <div id="page-wrapper">
 
             <!-- Header -->
@@ -95,91 +100,27 @@
             <div id="banner-wrapper">
                 <div id="banner" class="box container">
                     <div class="row">
-                        <img align="middle" src="images/heading_images/header.gif" alt=""/> 
+                        <img align="middle" src="images/heading_images/header.gif" alt=""/>
                     </div>
                 </div>
             </div>
 
-            <br>
-
-            <!-- Main -->
-            <div id="main-wrapper">
-                <div class="container">
-                    <div class="row 200%">
-                        <div class="4u 12u(medium)">
-                            <div id="sidebar">
-
-                                <!-- Sidebar -->
-                                <section>
-                                    <h3>About CUNY-BC China</h3>
-                                    <table id="tg-IkuPG" class="tg">
-                                        <tr>
-                                            <th class="tg-yw4l"><a href="whychina.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Why China?</a></th>
-                                        </tr>
-                                        <tr>
-                                            <th class="tg-yw4l"><a href="testimonials.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp; Testimonials</a></th>
-                                        </tr>
-                                        <tr>
-                                            <th class="tg-yw4l"><a href="faq.html"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; FAQ</a></th>
-                                        </tr>
-                                        <tr>
-                                            <th class="tg-yw4l"><a href="hostinstitutions.html"><i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Host Institutions</a></th>
-                                        </tr>
-                                    </table>                                      
-                                </section>
 
 
-                            </div>
-                        </div>
-                        <div class="8u 12u(medium) important(medium)">
-                            <div id="content">
 
-                                <!-- Content -->
-                                <article>
-
-                                    <h2>Photos</h2>
-
-                                    <p>You should go to <a href="https://www.facebook.com/cunybc.chinaprogram">facebook</a> to view more pictures and videos of previous China programs.</p>
-                                    <iframe width="626" height="352" src="https://www.youtube.com/embed/fvnMD1CVQms" frameborder="0" allowfullscreen></iframe>
-                                    <p style="margin-top: 0; margin-bottom: 0;">A video made by Professor Cheong and his students in the TV production classs: <a href="https://www.youtube.com/watch?v=fvnMD1CVQms">Winter 2014&nbsp;study in China</a></p>
-                                    <p style="margin-top: 0; margin-bottom: 0;">&nbsp;</p>
-                                    <hr>
-                                    <p>The links below are some photo albums previous participants posted to share. From these pictures, you can tell how the trips went and how much they enjoyed.</p>
-
-                                    <!-- IMAGE -->
-                                    <img src="images/photos_images/BestOfChinaKingdom-2013_htm_423fd965.jpg" alt="" width="225" height="169" />
-
-                                    <p>This link contains a slideshow of the trip we had with US educators.  Our study abroad trip covered most of the sites seen here.  For the photos and the slideshow, click here.</p>
-                                    <p>Some pictures of our <a href="http://picasaweb.google.com/CUNYinChina/Trips#">China trips</a></p>
-                                    <p>For more <a href="http://picasaweb.google.com/CUNYinChina/EducationFun#">educational and fun</a> parts of our trips</p>
-                                    <p>For side trip to <a href="http://picasaweb.google.com/CUNYinChina/Sanya">Sanya on Hainan Island</a> (said to be the oriental Hawaii)</p>
-                                    <p>For side trip to <a href="http://picasaweb.google.com/CUNYinChina/YellowMountain">Yellow Mountain</a> (acclaimed to be most beautiful mountain on this planet)</p>
-                                    <p>Side trip to <a href="http://picasaweb.google.com/CUNYinChina/Guilin02">Guilin &amp; Yangshuo</a></p>
-                                    <hr>
-                                    <h2>Summer Trips</h2>
-                                    <ul>
-                                        <li><p><a href="http://picasaweb.google.com/LBEmmer/China2007">Keith’s photos</a></p></li>
-                                        <li><p><a href="http://www1.snapfish.com/shareephotolib/p=24271154975361244/l=115958213/g=54924640/otsc=SYE/otsi=SALB/pns/share/p=24271154975361244/l=115958213/g=54924640/otsc=SYE/otsi=SALB">Sandra’s Pictures</a></p></li>
-                                        <li><p><a href="http://photobucket.com/albums/y187/CunyChina02/Summer%202004/">Other Students pictures</a></p></li>
-                                    </ul>
-                                    <hr>
-                                    <h2>Winter Trips</h2>
-                                    <ul>
-                                        <li><p><a href="http://community.webshots.com/user/rba4ever">Rafat's pictures</a></p></li>
-                                        <li><p><a href="http://share.shutterfly.com/action/welcome?sid=8AcuHLZq1aOHEg">Ana's &amp; Atifa's pics</a></p></li>
-                                        <li><p>Pictures by Fu and his brother Tien during <a href="http://photobucket.com/albums/v661/skymorality/Pictures%20of%20China/">winter 2004-5 trip to China</a></p></li>
-                                    
-                                    <li><p><a href="photos_ext.html">Test</a></p></li>
-                                    
-                                    </ul>
-                                </article>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            </br>
+            <img src="images/heading_images/China-03.jpg" alt=""/>
+            <img src="images/heading_images/China-07.jpg" alt=""/>
+            <img src="images/heading_images/China-10.jpg" alt=""/>
+            <img src="images/heading_images/China-12.jpg" alt=""/>
+            <img src="images/heading_images/China-13.jpg" alt=""/>
+            <img src="images/heading_images/China-14.jpg" alt=""/>
+            <img src="images/heading_images/China-15.jpg" alt=""/>
+            <img src="images/heading_images/china_nanjing.jpg" alt=""/>
+            <img src="images/heading_images/china_nanjing.jpg" alt=""/>
+            <img src="images/heading_images/china_nanjing.jpg" alt=""/>
+            <img src="images/heading_images/china_nanjing.jpg" alt=""/>
+            <img src="images/heading_images/china_nanjing.jpg" alt=""/>
             <!-- Footer -->
             <div id="footer-wrapper">
                 <footer id="footer" class="container">
@@ -190,11 +131,11 @@
                             <section class="widget">
                                 <h3>Brooklyn College</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/home.php">Brooklyn College</a></li>
-                                    <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396">BC Calendar</a></li>
-                                    <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP">BC Web Central</a></li>
-                                    <li><a href="http://library.brooklyn.cuny.edu/resources/">BC Library</a></li>
-                                    <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html">CUNYfirst</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/home.php" target="_blank">Brooklyn College</a></li>
+                                    <li><a href="http://events.brooklyn.cuny.edu/cal/main/showEventList.rdo;jsessionid=C8688D356AA59AFBE76F96E1C8B1D396" target="_blank">BC Calendar</a></li>
+                                    <li><a href="https://portal.brooklyn.edu/uPortal/f/welcome/normal/render.uP" target="_blank">BC Web Central</a></li>
+                                    <li><a href="http://library.brooklyn.cuny.edu/resources/" target="_blank">BC Library</a></li>
+                                    <li><a href="https://home.cunyfirst.cuny.edu/oam/Portal_Login1.html" target="_blank">CUNYfirst</a></li>
                                 </ul>
                             </section>
 
@@ -205,8 +146,8 @@
                             <section class="widget links">
                                 <h3>Department</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/undergraduate/speech_sciences.php">Speech Communication Arts and Sciences</a></li>
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/graduate/speech_sciences.php">Speech Communication Arts and Sciences</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/undergraduate/speech_sciences.php" target="_blank">Speech Communication Arts and Sciences</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/graduate/speech_sciences.php" target="_blank">Speech Communication Arts and Sciences</a></li>
                                 </ul>
                             </section>
 
@@ -217,8 +158,8 @@
                             <section class="widget links">
                                 <h3>Study Abroad in China</h3>
                                 <ul class="style2">
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities.php">Study Abroad Programs</a></li>
-                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities/China_Summer2016.php">China: CUNY-BC Study Abroad in China</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities.php" target="_blank">Study Abroad Programs</a></li>
+                                    <li><a href="http://www.brooklyn.cuny.edu/web/academics/international/opportunities/China_Summer2016.php" target="_blank">China: CUNY-BC Study Abroad in China</a></li>
                                 </ul>
                             </section>
 
@@ -247,7 +188,7 @@
                         <div class="12u">
                             <div id="copyright">
                                 <ul class="menu">
-                                    <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">Brooklyn College</a></li>
+                                    <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="#" target="_blank">Brooklyn College</a></li>
                                 </ul>
                             </div>
                         </div>
